2024-01-19  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha04: Heritage BBQ';git push
	git tag -a 5.2.0-alpha04 -m 'all: cf lsy mtd; ncclimo/ncremap: dpr cheyenne, spp derecho, upd perlmutter;ncremap: TR revert to --mono*, ncoidw, revamp MWF';git push --tags

	* nco_xtr_dfn() output draft CF metadata container variable and	attributes "family", "algorithm", and "implementation"

2024-01-18  Charlie Zender  <zender@uci.edu>

	* Tweak nco_xtr_dfn() to output draft CF metadata attributes "lossy_compresssion" and "lossy_compression_nsb"

	* Perlmutter remove gcc/11.2.0, update to cray-hdf5/1.12.2.9 cray-netcdf/4.9.0.9

2024-01-12  Charlie Zender  <zender@uci.edu>

	* Perlmutter remove GSL module

2024-01-11  Charlie Zender  <zender@uci.edu>

	* ncremap revamp MWF mode to allow user-specifed alg_lst

	* ncremap prefer 'ncoidw' to 'nco_idw'

2024-01-10  Charlie Zender  <zender@uci.edu>

	* Verify MWF mode works for TR with QU240 and ne11np4

	* ncremap replace --method mono* by --mono* since MWF mode revealed some failures with --method mono*

2024-01-08  Charlie Zender  <zender@uci.edu>

	* Deprecate Cheyenne, support NCAR Derecho

2024-01-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha03: Sunrise Snatchers';git push
	git tag -a 5.2.0-alpha03 -m 'all: 2024; ncclimo: refactor for tms inp_aut, fix Dec clm_bnd in djf mode, fix inp_glb;ncclimo/ncremap: [-f $fl] || [-L $fl], dpr ALCF mch';git push --tags

2024-01-05  Charlie Zender  <zender@uci.edu>

	* Update documentation dates and copyright notice to 2024

2024-01-03  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap Deprecate ALCF Cooley, Mira, Theta machines and Cobalt batch scheduler instructions

2023-12-30  Charlie Zender  <zender@uci.edu>

	* Verify globbing for input files works
