@@ -2099,123 +2099,11 @@ nco_xtr_dfn                          /* [fnc] Define extracted groups, variables
       } /* !md5 */
 
       /* 20240118: Write CF-Compliant PPC attribute per 
-	 https://github.com/cf-convention/cf-conventions/issues/403 */
-
-      /* Write PPC attribute */
-      if(var_trv.ppc != NC_MAX_INT){
-	aed_sct aed_ppc_alg;
-	aed_sct aed_ppc_cnt;
-	aed_sct aed_ppc_lvl;
-	char alg_nm_dsd[]="least_significant_digit";
-	char alg_nm_btg[]="BitGroom"; /* [sng] CV value per draft CF-Convention */
-	char alg_nm_shv[]="BitShave";
-	char alg_nm_set[]="BitSet";
-	char alg_nm_dgr[]="DigitRound";
-	char alg_nm_gbr[]="GranularBitRound"; /* [sng] CV value per draft CF-Convention */
-	char alg_nm_bgr[]="BitGroomRound";
-	char alg_nm_sh2[]="HalfShave";
-	char alg_nm_brt[]="BruteForce";
-	char alg_nm_btr[]="BitRound"; /* [sng] CV value per draft CF-Convention */
-	char cnt_nm_all[]="lossy_compression"; /* [sng] Attribute name to hold lossy compression container name (per draft CF-Convention) */
-	char fml_val[]="quantize"; /* [sng] Container variable family value (CV per draft CF-Convention) (Optional) */
-	char mpl_val[]="NCO"; /* [sng] Container variable implementation attribute value (per draft CF-Convention) */
-	char qnt_lvl_nsb_nm[]="lossy_compression_nsb"; /* [sng] Attribute name to hold NSB (CV value per draft CF-Convention) */
-	char qnt_lvl_nsd_nm[]="lossy_compression_nsd"; /* [sng] Attribute name to hold NSD (CV value per draft CF-Convention) */
-	char var_cnt_nm[]="compression_info"; /* [sng] Container variable name */
-	char var_cnt_alg_nm[]="algorithm"; /* [sng] Container variable attribute name for algorithm type (per draft CF-Convention) */
-	char var_cnt_fml_nm[]="family"; /* [sng] Container variable attribute name for algorithm family type (per draft CF-Convention) */
-	char var_cnt_mpl_nm[]="implementation"; /* [sng] Container variable attribute name for algorithm implementation (per draft CF-Convention) */
-	int ppc_old;
-	int rcd;
-	int var_cnt_id; /* [id] Container variable ID */
-	if(var_trv.flg_nsd){
-	  switch(nco_baa_cnv_get()){
-	  case nco_baa_btg: aed_ppc_alg.att_nm=alg_nm_btg; break;
-	  case nco_baa_shv: aed_ppc_alg.att_nm=alg_nm_shv; break;
-	  case nco_baa_set: aed_ppc_alg.att_nm=alg_nm_set; break;
-	  case nco_baa_dgr: aed_ppc_alg.att_nm=alg_nm_dgr; break;
-	  case nco_baa_gbr: aed_ppc_alg.att_nm=alg_nm_gbr; break;
-	  case nco_baa_bgr: aed_ppc_alg.att_nm=alg_nm_bgr; break;
-	  case nco_baa_sh2: aed_ppc_alg.att_nm=alg_nm_sh2; break;
-	  case nco_baa_brt: aed_ppc_alg.att_nm=alg_nm_brt; break;
-	  case nco_baa_btr: aed_ppc_alg.att_nm=alg_nm_btr; break;
-	  default: 
-	    (void)fprintf(stdout,"%s: ERROR %s reports unknown quantization algorithm\n",nco_prg_nm_get(),fnc_nm);
-	    nco_exit(EXIT_FAILURE);
-	    break;
-	  } /* !nco_baa_cnv_get() */
-	  switch(nco_baa_cnv_get()){
-	  case nco_baa_btg: 
-	  case nco_baa_shv: 
-	  case nco_baa_set: 
-	  case nco_baa_dgr: 
-	  case nco_baa_gbr: 
-	  case nco_baa_bgr:
-	  case nco_baa_sh2: 
-	  case nco_baa_brt: 
-	    aed_ppc_lvl.att_nm=qnt_lvl_nsd_nm; break;
-	  case nco_baa_btr: 
-	    aed_ppc_lvl.att_nm=qnt_lvl_nsb_nm; break;
-	  default: 
-	    (void)fprintf(stdout,"%s: ERROR %s reports unknown quantization algorithm\n",nco_prg_nm_get(),fnc_nm);
-	    nco_exit(EXIT_FAILURE);
-	    break;
-	  } /* !nco_baa_cnv_get() */
-	}else aed_ppc_alg.att_nm=alg_nm_dsd;
-	aed_ppc_lvl.val.ip=&var_trv.ppc;
-	aed_ppc_cnt.var_nm=aed_ppc_lvl.var_nm=var_trv.nm;
-	aed_ppc_cnt.id=aed_ppc_lvl.id=var_out_id;
-	aed_ppc_cnt.att_nm=cnt_nm_all;
-	aed_ppc_cnt.val.cp=var_cnt_nm;
-	rcd=nco_inq_att_flg(grp_out_id,aed_ppc_lvl.id,aed_ppc_lvl.att_nm,&aed_ppc_lvl.type,&aed_ppc_lvl.sz);
-	if(rcd != NC_NOERR){
-	  /* No PPC attribute yet exists */
-	  aed_ppc_cnt.sz=strlen(aed_ppc_cnt.val.cp);
-	  aed_ppc_cnt.type=NC_CHAR;
-	  aed_ppc_cnt.mode=aed_create;
-	  aed_ppc_lvl.sz=1L;
-	  aed_ppc_lvl.type=NC_INT;
-	  aed_ppc_lvl.mode=aed_create;
-	  (void)nco_aed_prc(grp_out_id,var_out_id,aed_ppc_cnt);
-	  (void)nco_aed_prc(grp_out_id,var_out_id,aed_ppc_lvl);
-	}else{
-	  if(aed_ppc_lvl.sz == 1L && aed_ppc_lvl.type == NC_INT){
-	    /* Conforming PPC attribute already exists, replace with new value only if rounder */
-	    (void)nco_get_att(grp_out_id,aed_ppc_lvl.id,aed_ppc_lvl.att_nm,&ppc_old,NC_INT);
-	    if(var_trv.ppc < ppc_old){
-	      aed_ppc_lvl.mode=aed_modify;
-	      (void)nco_aed_prc(grp_out_id,var_out_id,aed_ppc_lvl);
-	    } /* !aed_ppc_lvl.sz, !aed_ppc_lvl.type */
-	  }else{ /* !conforming */
-	    (void)fprintf(stderr,"%s: WARNING Non-conforming %s attribute found in variable %s, skipping...\n",nco_prg_nm_get(),aed_ppc_lvl.att_nm,var_trv.nm_fll);
-	  } /* !conforming */
-	} /* !rcd */
-	/* Does container variable already exist? */
-	rcd=nco_inq_varid_flg(grp_out_id,var_cnt_nm,&var_cnt_id);
-	if(rcd != NC_NOERR){
-	  aed_sct aed_cnt_alg;
-	  aed_sct aed_cnt_fml;
-	  aed_sct aed_cnt_mpl;
-	  /* If not, create and populate it */
-	  rcd=nco_def_var(grp_out_id,var_cnt_nm,NC_CHAR,(int)0,(int *)NULL,&var_cnt_id);
-	  aed_cnt_alg.var_nm=aed_cnt_mpl.var_nm=var_cnt_nm;
-	  aed_cnt_alg.id=aed_cnt_fml.id=aed_cnt_mpl.id=var_cnt_id;
-	  aed_cnt_alg.att_nm=var_cnt_alg_nm;
-	  aed_cnt_alg.val.cp=aed_ppc_alg.att_nm;
-	  aed_cnt_alg.sz=strlen(aed_cnt_alg.val.cp);
-	  aed_cnt_alg.type=aed_cnt_fml.type=aed_cnt_mpl.type=NC_CHAR;
-	  aed_cnt_alg.mode=aed_cnt_fml.mode=aed_cnt_mpl.mode=aed_create;
-	  aed_cnt_fml.att_nm=var_cnt_fml_nm;
-	  aed_cnt_fml.val.cp=fml_val;
-	  aed_cnt_fml.sz=strlen(aed_cnt_fml.val.cp);
-	  aed_cnt_mpl.att_nm=var_cnt_mpl_nm;
-	  aed_cnt_mpl.val.cp=mpl_val;
-	  aed_cnt_mpl.sz=strlen(aed_cnt_mpl.val.cp);
-	  (void)nco_aed_prc(grp_out_id,var_cnt_id,aed_cnt_fml);
-	  (void)nco_aed_prc(grp_out_id,var_cnt_id,aed_cnt_alg);
-	  (void)nco_aed_prc(grp_out_id,var_cnt_id,aed_cnt_mpl);
-	} /* !rcd */
-      } /* !PPC */
+	 https://github.com/cf-convention/cf-conventions/issues/403
+	 20240130 fxm nco_qnt_mtd() does not yet write metadata for DSD algorithm (rounding) */
+      if(var_trv.ppc != NC_MAX_INT && var_trv.flg_nsd){
+	(void)nco_qnt_mtd(nc_out_id,var_out_id,(nco_flt_typ_enm)nco_baa_cnv_get(),(nco_flt_typ_enm)nco_flt_nil,var_trv.ppc);
+      } /* !var_trv.ppc */
 
       /* Memory management after current extracted variable */
       if(grp_out_fll) grp_out_fll=(char *)nco_free(grp_out_fll);
